# open-meteo-client

./: .all-contributorsrc  .codecov.yml  .coderabbit.yaml  .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  justfile  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  live.yml  publish.yml
agents/sops/: docs-freshness.md
docs/: conf.py  index.md
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/.doctrees/explanation/: architecture.doctree  index.doctree  why-async.doctree  why-two-dependencies.doctree
docs/_build/html/.doctrees/how-to/: index.doctree  verify-installation.doctree
docs/_build/html/.doctrees/reference/: index.doctree
docs/_build/html/.doctrees/tutorial/: getting-started.doctree  index.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/openmeteo/application/: health.html
docs/_build/html/_sources/explanation/: architecture.md.txt  why-two-dependencies.md.txt
docs/_build/html/_sources/how-to/: index.md.txt  verify-installation.md.txt
docs/_build/html/explanation/: architecture.html  index.html  why-async.html  why-two-dependencies.html
docs/_build/html/how-to/: index.html  verify-installation.html
docs/_build/html/reference/: index.html
docs/_build/html/tutorial/: getting-started.html  index.html
docs/explanation/: architecture.md  index.md  why-async.md
docs/reference/: index.md
docs/tutorial/: getting-started.md  index.md
scripts/: regen_variables.py
src/openmeteo/: __init__.py  _exceptions.py
src/openmeteo/_generated/: __init__.py  variables.py
src/openmeteo/application/: __init__.py  client.py  health.py  weather.py
src/openmeteo/domain/: __init__.py  forecast.py  location.py  units.py  variable.py
src/openmeteo/infrastructure/: __init__.py  geocoding.py  http.py  openmeteo_api.py
tests/: conftest.py  test_smoke.py  test_weather_today.py
tests/fixtures/: today_dresden.json
tests/integration/: README.md  test_weather_today.py
tests/live/: README.md  test_live_weather_today.py
tests/unit/: README.md  test_client.py  test_domain_primitives.py  test_geocoding.py  test_http.py  test_location.py  test_openmeteo_api.py  test_package_metadata.py  test_ping.py  test_units.py  test_variable.py
tests/unit/domain/: test_forecast.py  test_location.py  test_unit_system.py
